--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ regenerate: true
             <a href="https://pages.github.com/">Github.io</a>
         </H3>
     </div>
-        기억 보조용 위키
+        지식 정리 wiki
     <div>
     </div>
     <div>
